[tool.poetry]
name = "testcase"
version = "0.1.0"
description = ""
authors = ["bubled33 <zimnitskiymisha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
beanie = "^1.25.0"
aiologger = "^0.7.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
